--- a/Config/config.json
+++ b/Config/config.json
@@ -1,9 +1,9 @@
 {
     "name": "Unruly",
-    "slug": "Unruly",
+    "slug": "Theme-Unruly",
     "author": "Orphevs",
     "version": "1.2.0",
-    "apiID": 0, // Useless ?
+    "apiID": 0,
     "slider": true,
     "configurations": {
         "favicon_url": "http:\/\/i.imgur.com\/FQPj5PV.jpg",
@@ -46,8 +46,8 @@
         "CSS_code": "",
         "logo": false
     },
-    "supported": { // Useless too ?
-		"cms": "^1.3.6",
+    "supported": {
+        "CMS": "^1.4.3",
         "eywek.shop.1": "^1.2.0",
         "eywek.support.2": "^1.0.9",
         "eywek.vote.3": "^2.0.5",
