--- a/Config/config.json
+++ b/Config/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Unruly",
-    "slug": "Theme-Unruly",
+    "slug": "Unruly",
     "author": "Orphevs",
     "version": "1.2.0",
     "apiID": 0,
