--- a/Config/config.json
+++ b/Config/config.json
@@ -1,8 +1,8 @@
 {
     "name": "Unruly",
-    "slug": "Theme-Unruly",
+    "slug": "Unruly",
     "author": "Orphevs",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "apiID": 0,
     "slider": true,
     "configurations": {
