Revert "Readme updated"
This reverts commit 95e75f864e3e47d3f1b341e157b570a58fae2000.

--- a/Config/config.json
+++ b/Config/config.json
@@ -1,8 +1,8 @@
 {
     "name": "Unruly",
-    "slug": "Unruly",
+    "slug": "Theme-Unruly",
     "author": "Orphevs",
-    "version": "1.2.1",
+    "version": "1.2.0",
     "apiID": 0,
     "slider": true,
     "configurations": {
