--- a/Config/config.json
+++ b/Config/config.json
@@ -2,7 +2,7 @@
     "name": "Unruly",
     "slug": "Unruly",
     "author": "Orphevs",
-    "version": "1.2.1",
+    "version": "1.2.2",
     "apiID": 0,
     "slider": true,
     "configurations": {
@@ -23,7 +23,7 @@
         "vitrine_title_3": "D\u00e9couvrez",
         "vitrine_text_3": "Vivez des aventures incroyables !",
         "vitrine_url_3": "",
-        "vote_global": "true",
+        "vote_global": "false",
         "vote_url": "",
         "status_global": "true",
         "status": "true",
@@ -36,9 +36,6 @@
         "social_global": "true",
         "slider": "true",
         "color": "",
-        "color-custom-1": "rgb(249, 86, 25)",
-        "color-custom-2": "rgb(219, 38, 38)",
-        "color-custom-3": "rgb(205, 34, 194)",
         "discord": "true",
         "discord_id": "316532971903385601",
         "loading": "true",
@@ -65,9 +62,9 @@
         "empiredev.codecadeau.74": "^1.0.0",
         "tronai.cps.98": "^1.1.0",
         "empiredev.auth.102": "^1.3.0",
-		"judgedeads.ts3.110": "^1.0.1",
-		"empiredev.wiki.114": "^1.0.0",
-		"empiredev.banlist.117": "^1.0.0",
-		"thomasfar.staff.119": "^1.0.0"
+        "judgedeads.ts3.110": "^1.0.1",
+        "empiredev.wiki.114": "^1.0.0",
+        "empiredev.banlist.117": "^1.0.0",
+        "thomasfar.staff.119": "^1.0.0"
     }
 }
